k8s/web_app/deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: web
  name: web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
        - env:
          - name: AccessKeyID
            valueFrom:
              secretKeyRef:
                name: webapp
                key: access_key
          - name: SecretAccessKey
            valueFrom:
              secretKeyRef:
                name: webapp
                key: secret_key
          image: cr.yandex/crphale4jc7cn8jf9u2f/web_app:980db813
          ports:
            - containerPort: 8080
          imagePullPolicy: Always
          name: web
      imagePullSecrets:
        - name: regcred
