k8s/web_app/service.yml
apiVersion: v1
kind: Service
metadata:
  name: web-server-service
spec:
  type: LoadBalancer
  externalTrafficPolicy: Cluster
  selector:
    app: web
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
