k8s/web_app/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-web
spec:
  ingressClassName: nginx
  rules:
  - host: web.example.com
    http:
      paths:
      - backend:
          service:
            name: web-server-service
            port:
              number: 80
        path: /
        pathType: Prefix
